--- a/tipcalculator/Base.lproj/Main.storyboard
+++ b/tipcalculator/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xdB-Bp-CMu">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Tip Calculator-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="tipcalculator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +17,139 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tip" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QVl-U7-diK">
+                                <rect key="frame" x="30" y="124" width="24.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eds-CH-o1a">
+                                <rect key="frame" x="451" y="124" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="0.00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BRI-KQ-h1G">
+                                <rect key="frame" x="401" y="174" width="169" height="27"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7dC-r3-Gdy">
+                                <rect key="frame" x="0.0" y="0.0" width="47.5" height="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="0.00" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qoQ-MN-qOF">
+                                <rect key="frame" x="520" y="84" width="50" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
+                                <connections>
+                                    <action selector="onEditingChanged:" destination="BYZ-38-t0r" eventType="editingChanged" id="sg4-Al-393"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Bill Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BgC-sa-9gC">
+                                <rect key="frame" x="30" y="84" width="87" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="Vvn-7q-uIO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Total" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hBF-3Y-5bU">
+                                <rect key="frame" x="30" y="174" width="52" height="26.5"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gSI-KJ-zul" userLabel="HL">
+                                <rect key="frame" x="30" y="154" width="540" height="5"/>
+                                <color key="backgroundColor" red="0.075768278693953972" green="0.71452122220540792" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="5" id="i1U-3A-7k0"/>
+                                </constraints>
+                            </view>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="88O-uD-fC5">
+                                <rect key="frame" x="30" y="211" width="540" height="29"/>
+                                <segments>
+                                    <segment title="18%"/>
+                                    <segment title="20%"/>
+                                    <segment title="25%"/>
+                                </segments>
+                                <connections>
+                                    <action selector="onEditingChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="0kV-Tw-F1A"/>
+                                </connections>
+                            </segmentedControl>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
+                        <constraints>
+                            <constraint firstItem="hBF-3Y-5bU" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="1N4-Fj-QUG"/>
+                            <constraint firstItem="BRI-KQ-h1G" firstAttribute="top" secondItem="gSI-KJ-zul" secondAttribute="bottom" constant="15" id="5jw-GJ-aLt"/>
+                            <constraint firstItem="gSI-KJ-zul" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="7Vc-g9-ebF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Eds-CH-o1a" secondAttribute="trailing" constant="10" id="ATl-O8-uZh"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="88O-uD-fC5" secondAttribute="trailing" constant="10" id="Boa-jO-vDX"/>
+                            <constraint firstItem="BgC-sa-9gC" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="HO8-PU-K2U"/>
+                            <constraint firstItem="88O-uD-fC5" firstAttribute="top" secondItem="hBF-3Y-5bU" secondAttribute="bottom" constant="10" id="Jpf-ny-hyL"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="qoQ-MN-qOF" secondAttribute="trailing" constant="10" id="KGT-IP-XVm"/>
+                            <constraint firstItem="QVl-U7-diK" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="LsF-v7-Ovy"/>
+                            <constraint firstItem="88O-uD-fC5" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="QT0-mb-7W6"/>
+                            <constraint firstItem="Eds-CH-o1a" firstAttribute="top" secondItem="qoQ-MN-qOF" secondAttribute="bottom" constant="10" id="UIz-d8-L32"/>
+                            <constraint firstItem="qoQ-MN-qOF" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="20" id="UPW-jI-qOC"/>
+                            <constraint firstItem="QVl-U7-diK" firstAttribute="top" secondItem="BgC-sa-9gC" secondAttribute="bottom" constant="10" id="WzH-pw-4rN"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="BRI-KQ-h1G" secondAttribute="trailing" constant="10" id="Yst-ye-5ig"/>
+                            <constraint firstItem="gSI-KJ-zul" firstAttribute="top" secondItem="Eds-CH-o1a" secondAttribute="bottom" constant="10" id="hqu-CZ-rAJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="gSI-KJ-zul" secondAttribute="trailing" constant="10" id="nkx-Kr-L1N"/>
+                            <constraint firstItem="BgC-sa-9gC" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="10" id="o1z-Tj-Hhe"/>
+                            <constraint firstItem="hBF-3Y-5bU" firstAttribute="top" secondItem="gSI-KJ-zul" secondAttribute="bottom" constant="15" id="rd7-pj-IN4"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="7dC-r3-Gdy"/>
+                            </mask>
+                        </variation>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="Etb-Qr-Vws" appends="YES" id="HOZ-xX-zzk"/>
+                        </connections>
                     </view>
+                    <navigationItem key="navigationItem" title="Tip Calculator" id="my1-8l-hNG"/>
+                    <connections>
+                        <outlet property="billField" destination="qoQ-MN-qOF" id="9mN-PX-Hem"/>
+                        <outlet property="tipControl" destination="88O-uD-fC5" id="s4E-Uf-cMP"/>
+                        <outlet property="tipLabel" destination="Eds-CH-o1a" id="CRS-0i-2mF"/>
+                        <outlet property="totalLabel" destination="BRI-KQ-h1G" id="rvA-At-PBs"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Etb-Qr-Vws">
+                    <connections>
+                        <action selector="onTapCalcView:" destination="BYZ-38-t0r" id="Y3P-Fj-C7P"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
+            <point key="canvasLocation" x="1207" y="446"/>
+        </scene>
+        <!--Tip Calculator-->
+        <scene sceneID="LLg-Pj-9xx">
+            <objects>
+                <navigationController title="Tip Calculator" automaticallyAdjustsScrollViewInsets="NO" id="xdB-Bp-CMu" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="rJ2-ls-f6T">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.075768278689999996" green="0.71452122220000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="F7b-DB-PAx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AXQ-ij-5hh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="395" y="446"/>
         </scene>
     </scenes>
 </document>
